--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -1,61 +1,17 @@
-
-
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-:root {
-    --branco: #FFFFFF;
-    --rosa: #C12D6D;
-    --azul: #0C7EAE;
-    --azulP: #060821;
-    --azulC: #182246;
-
-    --font1: 'Righteous', cursive;
-    --font2: 'Titillium Web', sans-serif;
-}
-
-body {
-    background-color: #FAFAFA;
-}
-
-
-#sombra{
-    position: fixed;
-    top: 0;
-    right: 110vW;
-    background-color: rgba(0,0,0,0.65);
-
-    width: 130vw;
-    height: 100vh;
-    z-index: 1;
-    overflow: hidden;
-    transition: .5s;
-    backdrop-filter: blur(10px);
-}
-
-.container {
-    max-width: 1400px;
-    width: 90%;
-    margin: 0 auto;
-}
-
-h1 {
+#home h1 {
     position: absolute;
     left: -999em;
     width: 1em;
     overflow: hidden;
 }
 
-h2 {
+#home h2 {
     font-family: var(--font1);
     font-size: 30px;
     text-transform: uppercase;
 }
 
-h3 {
+#home h3 {
     font-size: 28px;
 }
 
@@ -69,133 +25,16 @@ h3 {
     box-shadow: 15px 15px 30px rgba(0, 0, 0, 0.4);
 }
 
-main ul li {
+#home main ul li {
     text-transform: uppercase;
     font-size: 22px;
     margin: 10px 0;
     font-family: var(--font2);
 }
 
-li::marker {
+#home li::marker {
     color: var(--azul);
 }
-
-
-
-
-
-/* HEADER */
-header {
-    background-color: var(--azulP);
-}
-
-.header_conteudo {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 80px;
-}
-
-.menu_barras {
-    display: none;
-    z-index: 1;
-}
-
-.menu_barras>img {
-    width: 50px;
-}
-
-.barras{
-    /* border-top: 5px solid var(--branco); */
-    width: 40px;
-    height: 5px;
-    border-radius: 5px;
-    background-color: var(--branco);
-    display: block;
-    margin-top: 5px;
-    position: relative;
-    transition: .5s;
-}
-
-.barras::after{
-    content: '';
-    display: block;
-    width: 40px;
-    height: 5px;
-    border-radius: 5px;
-    background-color: var(--branco);
-    position: absolute;
-    top: 12px;
-    transition: .5s;
-}
-
-.barras::before{
-    content: '';
-    display: block;
-    width: 40px;
-    height: 5px;
-    border-radius: 5px;
-    background-color: var(--branco);
-    position: absolute;
-    top: -12px;
-    transition: .5s;
-}
-
-.ativo .barras{
-    /* background-color: transparent; */
-    transform: rotate(135deg);
-}
-
-.ativo .barras::after{
-    transform: rotate(-270deg);
-    top: 0;
-}
-
-.ativo .barras::before{
-    /* transform: rotate(90deg); */
-    top: 0;
-}
-
-.header_logo {
-    width: 50%;
-    max-width: 220px;
-}
-
-header nav {
-    max-width: 550px;
-    width: 60%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-family: var(--font1);
-    font-size: 18px;
-}
-
-header nav>div {
-    display: flex;
-    justify-content: space-between;
-    width: 65%;
-}
-
-header nav a {
-    color: var(--branco);
-    text-decoration: none;
-    text-transform: uppercase;
-    font-family: var(--font2);
-}
-
-.header_botao_login {
-    border: 4px solid var(--rosa);
-    padding: 4px 30px;
-    border-radius: 30%;
-    font-family: var(--font1);
-}
-
-.header_icone_login{
-    display: none;
-}
-
-
 
 
 
@@ -324,10 +163,6 @@ header nav a {
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), linear-gradient(92.23deg, #FF398F -25.96%, #17BBFF 126.83%);
 }
 
-
-
-
-
 /* CONEXAO */
 .conexao {
     height: 300px;
@@ -360,7 +195,7 @@ header nav a {
     font-family: var(--font2);
 }
 
-main ul{
+#home main ul {
     margin: 50px 0 50px 25px;
 }
 
@@ -427,118 +262,6 @@ main ul{
     color: var(--azulC);
 }
 
-
-
-
-
-/* FOOTER */
-footer {
-    background-image: 
-        linear-gradient( #06082170, #06082170),
-        url("../../assets/img/background_footer.png");
-    background-size: cover;
-    color: var(--branco);
-}
-
-.rodape {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: relative;
-}
-
-.span_dicas {
-    width: 100%;
-    max-width: 860px;
-    height: 300px;
-    background: rgba(255, 255, 255, 0.01);
-    border: 1px solid #FFFFFF;
-    box-shadow: 30px 30px 60px rgba(0, 0, 0, 0.8);
-    backdrop-filter: blur(7.5px);
-    border-radius: 60px;
-    top: -35px;
-    display: flex;
-    justify-content: end;
-    align-items: center;
-    position: relative;
-}
-
-.span_dicas img {
-    position: absolute;
-    top: -100px;
-    left: 70px;
-    width: 40%;
-    max-width: 300px;
-    /* width: 300px; */
-}
-
-.span_dicas_texto {
-    width: 52%;
-    font-family: var(--font2);
-    font-size: 24px;
-    padding-right: 40px;
-}
-
-.span_dicas_texto p {
-    margin-bottom: 30px;
-}
-
-.botao_dicas {
-    padding: 10px 50px;
-    color: var(--azul);
-    background-color: var(--branco);
-}
-
-.rodape>p {
-    font-family: var(--font2);
-    margin-bottom: 10px;
-}
-
-.rodape_conteudo {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    padding: 30px 0;
-}
-
-.rodape_conteudo h2 {
-    font-size: 24px;
-}
-
-.rodape_conteudo>img {
-    width: 40%;
-    max-width: 400px;
-    min-width: 250px;
-}
-
-.rodape_conteudo_paginas ul {
-    font-family: var(--font2);
-    font-size: 18px;
-}
-
-.rodape_conteudo_contatos {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-end;
-}
-
-.rodape_conteudo_contatos img {
-    width: 45px;
-    margin: 10px;
-}
-
-.rodape_conteudo_contatos>a {
-    font-family: var(--font2);
-    font-size: 18px;
-    text-decoration: none;
-    color: var(--branco);
-}
-
-
-
-
-
 /* MEDIAS */
 @media screen and (max-width: 1366px) {
     .conexao {
@@ -547,134 +270,59 @@ footer {
 }
 
 @media screen and (max-width: 768px) {
-    /* HEADER */
-    .menu_barras {
-        display: initial;
-    }
 
-    .header_logo{
-        /* margin-left: 55px; */
-    }
-
-    .menu_links {
-        /* display: none; */
-        position: absolute;
-        left: -300px;
-        overflow-x: hidden;
-        top: 70px;
-        flex-direction: column;
-        border: 1px solid rgba(255, 255, 255, 0.8);
-        backdrop-filter: blur(10px);
-        box-shadow: 15px 15px 30px rgba(0, 0, 0, 0.5);
-        width: auto;
-        z-index: 1;
-        border-radius: 10%;
-        padding: 10px;
-
-        -moz-transition: all 0.5s ease;
-        -webkit-transition: all 0.5s ease;
-        -o-transition: all 0.5s ease;
-        transition: all 0.5s ease;
-    }
-
-    .menu_links * {
-        margin: 10px 100px 10px 10px;
-    }
-
-    header nav {
-        /* justify-content: flex-end; */
-        width: auto;
-    }
-
-    .header_botao_login{
-        display: none;
-    }
-
-    .header_icone_login {
-        display: flex;
-    }
-
-    header nav svg {
-        width: 35px;
-        fill: var(--branco);
-    }
 
     /* BANNER */
-    .banner_conteudo{
+    .banner_conteudo {
         font-size: 14px;
         max-width: 500px;
     }
 
-    .banner_slogan_l2{
+    .banner_slogan_l2 {
         margin: 30px;
     }
 
-    .banner_botoes{
+    .banner_botoes {
         flex-direction: column;
         gap: 30px;
         margin-top: 30px;
     }
 
-    .banner_botoes a{
+    .banner_botoes a {
         align-self: center;
     }
 
 
-    .span_dicas img,
     .para_devs img,
-    .clientes_conteudo img{
+    .clientes_conteudo img {
         display: none;
     }
 
     .clientes_texto,
-    .devs_texto{
+    .devs_texto {
         text-align: center;
     }
 
-    .para_devs{
+    .para_devs {
         padding: 0;
     }
 
-    main ul {
+    #home main ul {
         text-align: initial;
     }
 
     /* SERVICOS */
-    .servicos_cards{
+    .servicos_cards {
         flex-direction: column;
         align-items: center;
     }
 
-    .card{
+    .card {
         width: 100%;
     }
 
-    .card2{
+    .card2 {
         margin-top: 100px;
-    }
-
-    /* FOOTER */
-    .span_dicas_texto{
-        width: 90%;
-        text-align: center;
-    }
-
-    .rodape_conteudo{
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .rodape_conteudo_contatos{
-        align-items: center;
-        margin: 50px 0;
-    }
-
-    .rodape_conteudo>img{
-        order: -1;
-    }
-
-    .rodape_conteudo_paginas{
-        order: 1;
     }
 }
 
@@ -682,33 +330,33 @@ footer {
     .banner_conteudo {
         font-size: 13px;
     }
-    
-    .span_cliente{
+
+    .span_cliente {
         font-size: 18px;
     }
 
-    h2{
+    #home h2 {
         font-size: 22px;
     }
 
-    main ul {
+    #home main ul {
         margin: 40px 0;
     }
 
-    main ul li {
+    #home main ul li {
         font-size: 17px;
     }
 
     .botao {
         font-size: 16px;
     }
-    
-    .clientes_botao_cli{
-        padding: 12px 40px;   
+
+    .clientes_botao_cli {
+        padding: 12px 40px;
     }
-    
-    .clientes_botao_devs{
-        padding: 9px 40px;   
+
+    .clientes_botao_devs {
+        padding: 9px 40px;
     }
 
     .span_dicas_texto {
