--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,6 +1,7 @@
+/* FOOTER */
 footer {
-    background-image: 
-        linear-gradient( #06082170, #06082170),
+    background-image:
+        linear-gradient(#06082170, #06082170),
         url("../../assets/img/background_footer.png");
     background-size: cover;
     color: var(--branco);
@@ -102,28 +103,33 @@ footer {
 }
 
 @media screen and (max-width: 768px) {
-
     /* FOOTER */
-    .span_dicas_texto{
+    
+    .span_dicas img {
+        display: none;
+    }
+
+    .span_dicas_texto {
         width: 90%;
         text-align: center;
     }
 
-    .rodape_conteudo{
+    .rodape_conteudo {
         flex-direction: column;
         align-items: center;
     }
 
-    .rodape_conteudo_contatos{
+    .rodape_conteudo_contatos {
         align-items: center;
         margin: 50px 0;
     }
 
-    .rodape_conteudo>img{
+    .rodape_conteudo>img {
         order: -1;
     }
 
-    .rodape_conteudo_paginas{
+    .rodape_conteudo_paginas {
         order: 1;
     }
+
 }
