--- a/src/pages/ListaDev/style.css
+++ b/src/pages/ListaDev/style.css
@@ -1,62 +1,8 @@
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-:root {
-    --branco: #FFFFFF;
-    --rosa: #C12D6D;
-    --azul: #0C7EAE;
-    --azulP: #060821;
-    --azulC: #182246;
-
-    --font1: 'Righteous', cursive;
-    --font2: 'Titillium Web', sans-serif;
-}
-
-#sombra {
-    position: fixed;
-    top: 0;
-    right: 110vW;
-    background-color: #000000a6;
-
-    width: 130vw;
-    height: 100vh;
-    z-index: 1;
-    overflow: hidden;
-    transition: .5s;
-    backdrop-filter: blur(10px);
-}
-
-.container {
-    max-width: 1400px;
-    width: 90%;
-    margin: 0 auto;
-}
-
-h2 {
-    font-family: var(--font1);
-    font-size: 30px;
-    text-transform: uppercase;
-}
-
-.botao {
-    font-family: var(--font1);
-    color: var(--branco);
-    text-transform: uppercase;
-    font-size: 18px;
-    text-decoration: none;
-    border-radius: 30%;
-    box-shadow: 15px 15px 30px #00000066;
-}
-
-
 /* MAIN */
-main {
+main#lista-devs {
     background-image:
         linear-gradient(180deg, #060821 0%, #06082120 25%, #0608218f 80%, #060821 100%),
-        url("../img/background_login.png");
+        url("../../assets/img/background_login.png");
     min-height: calc(100vh - 339px);
     background-size: cover;
     background-repeat: no-repeat;
@@ -90,13 +36,13 @@ main {
     color: var(--branco);
 }
 
-h1 {
+#lista-devs h1 {
     font-family: var(--font1);
     font-size: 50px;
     text-align: center;
 }
 
-hr {
+#lista-devs hr {
     margin: 20px auto;
     width: 80%;
     height: 4px;
@@ -184,125 +130,4 @@ hr {
     margin-bottom: 20px;
     padding-bottom: 20px;
     border-bottom: solid 1px #ffffff34;
-}
-
-.dev {
-    height: 70px;
-    width: 85%;
-    margin: 0 auto;
-    
-    display: flex;
-    justify-content: space-between;
-
-    font-family: var(--font2);
-}
-
-.grupo_contato {
-    height: 100%;
-    width: 70%;
-
-    display: flex;
-
-}
-
-.contato_dev {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-}
-
-.grupo_contato img {
-    height: 100%;
-    border-radius: 50%;
-    margin-right: 40px;
-}
-
-.grupo_contato h2 {
-    font-size: 24px;
-    font-family: var(--font2);
-    text-transform: capitalize;
-}
-
-.grupo_contato p {
-    font-size: 14px;
-}
-
-.techs {
-    width: 180px;
-
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.techs span {
-    font-size: 14px;
-    padding: 2px 10px;
-    border-radius: 20px;
-    background-color: white;
-    color: var(--azulP);
-}
-
-
-/* FOOTER */
-footer {
-    background-color: var(--azulP);
-    /* background-image: 
-        linear-gradient( #06082170, #06082170),
-        url("../img/background_footer.png"); */
-    background-size: cover;
-    color: var(--branco);
-    background-repeat: no-repeat;
-}
-
-.rodape {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.rodape>p {
-    font-family: var(--font2);
-    margin-bottom: 10px;
-}
-
-.rodape_conteudo {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    padding: 30px 0;
-}
-
-.rodape_conteudo h2 {
-    font-size: 24px;
-}
-
-.rodape_conteudo>img {
-    width: 40%;
-    max-width: 400px;
-    min-width: 250px;
-}
-
-.rodape_conteudo_paginas ul {
-    font-family: var(--font2);
-    font-size: 18px;
-}
-
-.rodape_conteudo_contatos {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-end;
-}
-
-.rodape_conteudo_contatos img {
-    width: 45px;
-    margin: 10px;
-}
-
-.rodape_conteudo_contatos>a {
-    font-family: var(--font2);
-    font-size: 18px;
-    text-decoration: none;
-    color: var(--branco);
 }
