--- a/src/pages/CadastroServico/style.css
+++ b/src/pages/CadastroServico/style.css
@@ -1,23 +1,21 @@
-#cadastro_serv{
-    
-}
-main#cadastro_serv {
+/* MAIN */
+.main_cad_servico {
     background-image:
         linear-gradient(180deg, #060821 0%, #06082120 25%, #0608218f 80%, #060821 100%),
-        url("../../assets/img/background_login.png");
+        url("../../assets/images/background_login.png");
     min-height: calc(100vh - 339px);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: bottom;
 }
 
-#cadastro_serv .container_cad_serv {
+.main_cad_servico .container_cad_serv {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-#cadastro_serv  .cad_serv_conteudo {
+.main_cad_servico .cad_serv_conteudo {
     background: linear-gradient(114.61deg, #ffffff0d 1.08%, #ffffff1e 99.26%);
     box-shadow: 30px 30px 60px #00000080;
     border: 1px solid #ffffffcc;
@@ -33,13 +31,13 @@ main#cadastro_serv {
     margin: 100px 0;
 }
 
-#cadastro_serv   h1 {
+.main_cad_servico h1 {
     font-family: var(--font1);
     font-size: 50px;
     text-align: center;
 }
 
-#cadastro_serv   hr {
+.main_cad_servico hr {
     margin: 20px auto;
     width: 80%;
     height: 4px;
@@ -48,7 +46,7 @@ main#cadastro_serv {
     border-radius: 50%;
 }
 
-#cadastro_serv   .cad_serv_formulario {
+.main_cad_servico .cad_serv_formulario {
     width: 95%;
     max-width: 460px;
     display: flex;
@@ -56,20 +54,20 @@ main#cadastro_serv {
     font-family: var(--font2);
 }
 
-#cadastro_serv   .cad_serv_box_input {
+.main_cad_servico .cad_serv_box_input {
     display: flex;
     flex-direction: column;
     width: 100%;
     margin: 15px 0;
 }
 
-#cadastro_serv   label {
+.main_cad_servico label {
     font-size: 20px;
 }
 
-#cadastro_serv   .cad_serv_box_input textarea,
-#cadastro_serv   .cad_serv_box_input2 > input,
-#cadastro_serv   .cad_serv_box_input > input {
+.main_cad_servico .cad_serv_box_input textarea,
+.main_cad_servico .cad_serv_box_input2>input,
+.main_cad_servico .cad_serv_box_input>input {
     width: 100%;
     padding: 8px;
     border-radius: 20px;
@@ -82,57 +80,57 @@ main#cadastro_serv {
     resize: none;
 }
 
-#cadastro_serv   .cad_serv_box_input textarea{
+.main_cad_servico .cad_serv_box_input textarea {
     height: 100px;
 }
 
-#cadastro_serv   .cad_serv_box_input textarea:focus-visible,
-#cadastro_serv   #cad_select_skill:focus-visible,
-#cadastro_serv   .cad_serv_box_input2 > input:focus-visible,
-#cadastro_serv   .cad_serv_box_input > input:focus-visible {
+.main_cad_servico .cad_serv_box_input textarea:focus-visible,
+.main_cad_servico #cad_select_skill:focus-visible,
+.main_cad_servico .cad_serv_box_input2>input:focus-visible,
+.main_cad_servico .cad_serv_box_input>input:focus-visible {
     outline: 2px solid var(--rosa);
 }
 
 /* Cor de fundo do autocomplete */
-#cadastro_serv   input:-webkit-autofill {
+.main_cad_servico input:-webkit-autofill {
     -webkit-box-shadow: 0 0 0 30px #524569 inset;
 }
 
 /* Cor do texto do autocomplete */
-#cadastro_serv   input:-webkit-autofill {
+.main_cad_servico input:-webkit-autofill {
     -webkit-text-fill-color: var(--branco);
 }
 
-#cadastro_serv   .cad_serv_box_input textarea::placeholder,
-#cadastro_serv   .cad_serv_box_input2 > input::placeholder,
-#cadastro_serv   .cad_serv_box_input > input::placeholder {
+.main_cad_servico .cad_serv_box_input textarea::placeholder,
+.main_cad_servico .cad_serv_box_input2>input::placeholder,
+.main_cad_servico .cad_serv_box_input>input::placeholder {
     color: #ffffff80;
     font-size: 15px;
     font-family: var(--font2);
 }
 
-#cadastro_serv   .cad_serv_formulario > span{
+.main_cad_servico .cad_serv_formulario>span {
     font-family: var(--font1);
     font-size: 30px;
     text-align: center;
     margin-top: 30px;
 }
 
-#cadastro_serv   .cad_hard_skill {
+.main_cad_servico .cad_hard_skill {
     display: flex;
     flex-direction: column;
     position: relative;
     right: 182px;
-    width: 460px; 
+    width: 460px;
     display: none;
 }
 
-#cadastro_serv   .cad_linha_select{
+.main_cad_servico .cad_linha_select {
     display: flex;
     gap: 10%;
 }
 
-#cadastro_serv   #cad_select_skill{
+.main_cad_servico #cad_select_skill {
     flex: 2;
     padding: 8px;
     border-radius: 20px;
@@ -141,18 +139,18 @@ main#cadastro_serv {
     box-shadow: 30px 30px 60px 0px #00000090;
     backdrop-filter: blur(15px);
     color: #ffffffaa;
-    font-size:  16px;
+    font-size: 16px;
 }
 
-#cadastro_serv   #cad_select_skill option{
+.main_cad_servico #cad_select_skill option {
     /* appearance: none; */
     background-color: #454158;
     /* background: linear-gradient(136deg, #ffffff1a 0%, #ffffff0b 100%); */
 }
 
-#cadastro_serv   #cad_btn_inserir{
+.main_cad_servico #cad_btn_inserir {
     flex: .8;
-    font-size:  18px;
+    font-size: 18px;
     color: var(--branco);
     border: 4px solid var(--rosa);
     /* padding: 4px 30px; */
@@ -163,14 +161,14 @@ main#cadastro_serv {
     cursor: pointer;
 }
 
-#cadastro_serv   #cad_lista_skills{
+.main_cad_servico #cad_lista_skills {
     display: flex;
     gap: 10px;
     flex-wrap: wrap;
     padding: 50px 0;
 }
 
-#cadastro_serv   .cad_item_skill{
+.main_cad_servico .cad_item_skill {
     border: 1px solid #b5b5b5;
     background: var(--branco);
     color: var(--azulP);
@@ -182,7 +180,7 @@ main#cadastro_serv {
     gap: 10px;
 }
 
-#cadastro_serv   .cad_item_excluir{
+.main_cad_servico .cad_item_excluir {
     background: none;
     border: none;
     display: flex;
@@ -190,17 +188,17 @@ main#cadastro_serv {
     cursor: pointer;
 }
 
-#cadastro_serv   .cad_item_excluir:hover{
+.main_cad_servico .cad_item_excluir:hover {
     scale: 1.1;
-    filter:drop-shadow(0 0 2px var(--azul));
+    filter: drop-shadow(0 0 2px var(--azul));
 }
 
-#cadastro_serv   .cad_item_excluir svg{
+.main_cad_servico .cad_item_excluir svg {
     fill: var(--rosa);
     height: 16px;
 }
 
-#cadastro_serv   .cad_botao {
+.main_cad_servico .cad_botao {
     align-self: center;
     font-family: var(--font1);
     color: var(--branco);
@@ -215,49 +213,3 @@ main#cadastro_serv {
     margin-top: 25px;
     cursor: pointer;
 }
-
-@media screen and (max-width: 768px){
-    #cadastro_serv .menu_barras {
-        display: initial;
-    }
-    #cadastro_serv .menu_links {
-        /* display: none; */
-        position: absolute;
-        left: -300px;
-        overflow-x: hidden;
-        top: 70px;
-        flex-direction: column;
-        border: 1px solid #ffffffcc;
-        backdrop-filter: blur(10px);
-        box-shadow: 15px 15px 30px #00000080;
-        width: auto;
-        z-index: 1;
-        border-radius: 10%;
-        padding: 10px;
-
-        -moz-transition: all 0.5s ease;
-        -webkit-transition: all 0.5s ease;
-        -o-transition: all 0.5s ease;
-        transition: all 0.5s ease;
-    }
-
-    #cadastro_serv .menu_links * {
-        margin: 10px 100px 10px 10px;
-    }
-}
-
-@media screen and (max-width: 600px){
-    #cadastro_serv   .cad_hard_skill {
-        width: 345px;
-        right: 125px;
-    }
-}
-
-@media screen and (max-width: 420px) {
-    #cadastro_serv   .cad_hard_skill {
-        width: 260px;
-        right: 80px;
-    }
-}
-
-
